option('debug-thread', type : 'boolean', value : false,
       description : '''Enabling this produces massive output and should not be
                                              enabled lightly.
                                              Make sure to disable it before running tools like
                                              helgrind or DRD on any program that uses pwxLib!
                                              (Default: false, Implies debug-extra=true)''')

option('annotations', type : 'boolean', value : false,
       description : '''If this is enabled, glibc is told to annotate inter
                                              thread synchronization events. This is needed if you do
                                              not want to get plenty of false positives in Helgrind.
                                              You must have valgrind installed on your system and
                                              valgrind/helgrind.h somewhere it can be found (like
                                              /usr/include) (Default: false, Implies
                                              debug-extra=true)''')

option('profile', type : 'boolean', value : false,
       description : '''Enable profiling output.
                                              (Default: false, Implies debug=false)''')

# By default pwxLib uses yielding spinlocks (see below
# for an explanation), but there might be reasons to use
# mutexes instead.
# Using spinlocks is not only more lightweight (an atomic_flag instead
# of a full scale mutex), but it has a bit better performance, too.
# Examples: (200,000 random elements inserted/removed, 200 elements searched, 8 threads)
# Note: The test machine is a dual core i7, 1333MHz, Hyper Threading, 8GiB RAM.
#                              yielding spinlocks     |        mutextes
#                            Add /   Search /   Clear |      Add /   Search /   Clear
#  Singly linked lists    756 ms /   821 ms /  126 ms |  1225 ms /  1207 ms /  147 ms
#  Doubly linked lists    761 ms /  1448 ms /  163 ms |  1206 ms /  1359 ms /  189 ms
#  Singly linked rings    783 ms /   777 ms /  129 ms |  1214 ms /  1634 ms /  187 ms
#  Doubly linked rings    758 ms /  1472 ms /  170 ms |  1204 ms /  1926 ms /  244 ms
#  Stacks                 715 ms /   817 ms /  130 ms |  1223 ms /  1759 ms /  204 ms
#  Queues                 616 ms /  1440 ms /  177 ms |  1203 ms /  2010 ms /  258 ms
#  Sets                   831 ms /     0 ms /  691 ms |   971 ms /     0 ms /  633 ms
#  Chained Hash Tables    388 ms /     0 ms /  269 ms |   758 ms /     0 ms /  414 ms
#  Open Hash Tables       497 ms /     0 ms /  155 ms |   807 ms /     0 ms /  181 ms
option('spinlocks', type : 'boolean', value : true,
       description : '''Use atomic_flag spinlocks instead of mutexes.
                                              (Default: true)''')

# The following settings lets threads do a yield() whenever
# they wait to get the spinlock. This setting is ignored
# if mutexes are used, see above.
# By default threads do yield, as this results in a much better
# performance when inserting or removing elements from containers.
# The performance of retrievals, however, is only slightly worse
# without the yield.
# Examples: (200,000 random elements inserted/removed, 200 elements searched, 8 threads)
# Note: The test machine is a dual core i7, 1333MHz, Hyper Threading, 8GiB RAM.
#                              yield() enabled        | yield() disabled
#                            Add /   Search /   Clear |      Add /   Search /   Clear
#  Singly linked lists    756 ms /   821 ms /  126 ms |  9649 ms /   786 ms /  121 ms
#  Doubly linked lists    761 ms /  1448 ms /  163 ms | 35160 ms /  2248 ms /  171 ms
#  Singly linked rings    783 ms /   777 ms /  129 ms |  6254 ms /   799 ms /  121 ms
#  Doubly linked rings    758 ms /  1472 ms /  170 ms | 26490 ms /  2053 ms /  162 ms
#  Stacks                 715 ms /   817 ms /  130 ms |  5975 ms /   833 ms /  122 ms
#  Queues                 616 ms /  1440 ms /  177 ms | 36107 ms /  2161 ms /  172 ms
#  Sets                   831 ms /     0 ms /  691 ms |   814 ms /     0 ms / 2299 ms
#  Chained Hash Tables    388 ms /     0 ms /  269 ms |  1459 ms /     0 ms /  180 ms
#  Open Hash Tables       497 ms /     0 ms /  155 ms |  1513 ms /     0 ms /  150 ms
option('yielding', type : 'boolean', value : true,
       description : '''Let spinlocks yield when they can not lock.
                                              (Default: true, implies spinlocks=true)''')

option('html', type : 'boolean', value : true,
       description : 'Use doxygen to build HTML documentation (Default: true)')

option('tests', type : 'boolean', value : false,
       description : 'Build the pwxLib test programs (Default: false)')

option('install-tests', type : 'boolean', value : false,
       description : 'Install the pwxLib test programs (Default: false)')

option('torture', type : 'boolean', value : false,
       description : '''Build "torture", a multi threading container burner
                                              (Default: false)''')
